--- a/ID_Templates/Vertical CR80/Form.html
+++ b/ID_Templates/Vertical CR80/Form.html
@@ -21,7 +21,8 @@
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Energy Institute High School Student ID <! this is the name of the template, hookup to dart
+                
+               <h4> Vertical CR80 Example </h4> <!--this is the name of the template, hookup to dart-->
             </div>
             <div class="panel-body">
                 <div class="form-group">
