generalized template, added template

--- a/ID_Templates/Vertical CR80/Card/index.html
+++ b/ID_Templates/Vertical CR80/Card/index.html
@@ -1,29 +1,29 @@
 <!doctype html>
 <html>
     <head>
-        <link href="card/styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans" rel="stylesheet">
     </head>
     <body>
         <div class="page" id="one">
-            <div id="header">Cookies INC</div>
-            <img src="card/photo.jpg" id="photo" />
-            <img src="card/energy.png" id="energy" />
-            <img src="card/qr.png" id="qr" />
-            <div id="title">Chief Cookie Eater</div>
-            <div id="name">Cookie Monster</div>
-            <div id="id">ID#: 1948293</div>
-            <div id="grade">Grade 11</div>
-            <div id="moto">Eat. Good. Cookies</div>
-            <div id="expires">Expires: 08/2019</div>
+            <div id="header">ENERGY INSTITUTE</div>
+            <img src="selfie.jpg" id="selfie" />
+            <img src="energy.png" id="energy" />
+            <img src="qr.png" id="qr" />
+            <div id="title">Code Monkey Extraordinaire</div>
+            <div id="name">KAI PAGE</div>
+            <div id="id">ID#: 1540120</div>
+            <div id="clearance">Grade 11</div>
+            <div id="iii">Imagine. Invent. Inspire.</div>
+            <div id="expiry">Expires: 08/2019</div>
         </div>
         <div class="page" id="two">
-            <img src="card/energy.png" id="energy2" />
+            <img src="energy.png" id="energy2" />
             <div id="addrz">
                 <div>Energy Institute High School</div>
                 <div>3501 Southmore Blvd</div>
                 <div>Houston, Texas 77004</div>
-                <div>(713) 802-4620</div>
+                <div>(713)802-4620</div>
                 <div>www.energyhigh.org</div>
                 <div>facebook.com/energyinstitutehighschool</div>
                 <div>twitter.com/energyihs</div>
