--- a/ID_Templates/Vertical CR80/Card.html
+++ b/ID_Templates/Vertical CR80/Card.html
@@ -3,6 +3,7 @@
     <head>
         <link href="card/styles.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans" rel="stylesheet">
+        <title>Energized ID</title>
     </head>
     <body>
         <div class="page" id="one">
@@ -29,7 +30,7 @@
                 <div>twitter.com/energyihs</div>
                 <div>instagram.com/energyihs</div>
             </div>
-            <img src="https://barcode.tec-it.com/barcode.ashx?data=1540120&code=Code39&multiplebarcodes=false&translate-esc=false&unit=Fit&dpi=96&imagetype=Png&rotation=0&color=%23000000&bgcolor=%23ffffff&qunit=Mm&quiet=0" id="barcode" />
+            <img src="https://barcode.tec-it.com/barcode.ashx?data=1948293&code=Code39&multiplebarcodes=false&translate-esc=false&unit=Fit&dpi=96&imagetype=Png&rotation=0&color=%23000000&bgcolor=%23ffffff&qunit=Mm&quiet=0" id="barcode" />
         </div>
     </body>
 </html>
