--- a/ID_Templates/Vertical CR80/Form.html
+++ b/ID_Templates/Vertical CR80/Form.html
@@ -10,6 +10,8 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
@@ -53,7 +55,7 @@
               
 <video id="player" controls autoplay></video>
 <button id="capture">Capture</button>
-<canvas id="canvas" width=320 height=240></canvas>
+<canvas id="canvas" width="200 " height="300"></canvas>
 <script>
   const player = document.getElementById('player');
 
@@ -66,6 +68,8 @@
   captureButton.addEventListener('click', () => {
     // Draw the video frame to the canvas.
     context.drawImage(player, 0, 0, canvas.width, canvas.height);
+        // Stop all video streams.
+        player.srcObject.getVideoTracks().forEach(track => track.stop());
   });
 
   // Attach the video stream to the video element and autoplay.
