--- a/ID_Templates/Vertical CR80/Card.html
+++ b/ID_Templates/Vertical CR80/Card.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="page" id="one">
-            <div id="header">Cookies INC</div>
+            <div id="header">COOKIES INC</div>
             <img src="card/photo.jpg" id="photo" />
             <img src="card/energy.png" id="energy" />
             <img src="card/qr.png" id="qr" />
@@ -15,7 +15,7 @@
             <div id="name">Cookie Monster</div>
             <div id="id">ID#: 1948293</div>
             <div id="grade">Grade 11</div>
-            <div id="moto">Eat. Good. Cookies</div>
+            <div id="moto">EAT. GOOD. COOKIES</div>
             <div id="expires">Expires: 08/2019</div>
         </div>
         <div class="page" id="two">
